--- a/PerfumesLeo/PerfumesLeo/Web.config
+++ b/PerfumesLeo/PerfumesLeo/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DBPerfume.mssql.somee.com;packet size=4096;user id=leandro01832_SQLLogin_1;pwd=7tewoxjz8k;data source=DBPerfume.mssql.somee.com;persist security info=False;initial catalog=DBPerfume" providerName="System.Data.SqlClient"/>
+  <!--  <add name="DefaultConnection" connectionString="Data Source=DBPerfume.mssql.somee.com;packet size=4096;user id=leandro01832_SQLLogin_1;pwd=7tewoxjz8k;data source=DBPerfume.mssql.somee.com;persist security info=False;initial catalog=DBPerfume" providerName="System.Data.SqlClient"/>-->
+  <add name="DefaultConnection" connectionString="Data Source=LAPTOP-9LQ8LUGC\SQLEXPRESS;Initial Catalog=DBPerfume;Integrated Security=True" providerName="System.Data.SqlClient"/> 
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
